--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Title: Explorer designed to visualize complex multi-year multi-specimen data. Case study of Slovenian wolves.
-version: 0.515
+version: 0.9
 Authors: Roman Luštrik & Žan Kuralt
-License: MIT
+License: GNU GENERAL PUBLIC LICENSE
 DisplayMode: Normal
 Type: Shiny
